<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="io.eberlein.apyide.ui.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_new_project"
        android:name="io.eberlein.apyide.ui.NewProjectFragment"
        android:label="@string/new_project"
        tools:layout="@layout/fragment_new_project"/>

    <fragment
        android:id="@+id/nav_open_project"
        android:name="io.eberlein.apyide.ui.OpenProjectFragment"
        android:label="@string/open_project"
        tools:layout="@layout/fragment_open_project"/>

    <fragment
        android:id="@+id/nav_settings"
        android:name="io.eberlein.apyide.ui.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings"/>

</navigation>