<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_header"
        android:text="@string/app_name"
        android:textSize="48sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_sub_header"
        android:text="@string/app_name_desc"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_header"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_create_project"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/new_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_open_project"
        android:text="@string/open_project"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_create_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_install_python"
        android:layout_below="@id/btn_open_project"
        android:text="install python"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>