<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_header"
        android:text="@string/new_project"
        android:textSize="48sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_project_name"
        android:text="@string/project_name"
        android:layout_below="@id/tv_header"
        android:layout_marginStart="8dp"
        android:labelFor="@id/et_project_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_project_name"
        android:layout_below="@id/tv_project_name"
        android:layout_alignStart="@id/tv_project_name"
        android:layout_marginEnd="8dp"
        android:theme="@style/DefaultEditTextTheme"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_create_project"
        android:text="@string/create"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>